Fix: Share buttons not working with z-index set to negative, remove it and set header and footer z-indexes instead to keep them above share buttons when scrolling in very small screens

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -17,6 +17,7 @@ header.layout-header,
 footer.layout-footer {
     font-family: base.$primary-font-family;
     background-color: base.$dark-charcoal;
+    z-index: 1;
 }
 
 header.layout-header {
